# miniapps

./: CMakeLists.txt  README.md
HPCG/: .gitignore  CMakeLists.txt
HPCG/setup/: Make.MPIICPC_OMP
HPCG/src/: CMakeLists.txt  ComputeDotProduct.cpp  ComputeMG.cpp  ComputeMG.hpp  ComputeProlongation.cpp  ComputeProlongation.hpp  ComputeResidual.cpp  ComputeRestriction.cpp  ComputeSPMV.cpp  ComputeSPMV.hpp  ComputeSYMGS.cpp  ComputeSYMGS.hpp  ComputeWAXPBY.cpp  ComputeWAXPBY_ref.cpp  GenerateCoarseProblem.cpp  ReportResults.cpp  TestSymmetry.cpp  YAML_Doc.hpp  YAML_Element.hpp  init.cpp
HPCG/testing/: main.cpp
MiniGhost/: .gitattributes  CMakeLists.txt  README.md
MiniGhost/src/: CMakeLists.txt  global_sum.hpp  mini_ghost.cpp  pack_buffer.hpp  params.hpp  partition.hpp  profiling.hpp  recv_buffer.hpp  send_buffer.hpp  spikes.hpp  stencils.hpp  stepper.cpp  stepper.hpp  unpack_buffer.hpp  write_grid.cpp  write_grid.hpp
src/: CG.cpp  CMakeLists.txt  ComputeDotProduct.hpp  ComputeProlongation.cpp  ComputeResidual.hpp  ComputeRestriction.hpp  ComputeWAXPBY.hpp  Geometry.hpp  ReadHpcgDat.cpp  WriteProblem.cpp  YAML_Doc.cpp  hpcg.hpp  init.cpp  mytimer.cpp
